k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fincen-sar
  labels:
    app.kubernetes.io/part-of: fincen-sar
